src/app/pages/manual-activation/manual-activation.component.css
.manualMainContainer {
  height: 90%;
}

.manualMainContainer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.manualControlsContainer {
  display: flex;
  flex-direction: column;
}

.manualScheduledTableContainer {
  height: 100%;
  width: 100%;
  margin: 1vw;

}

.volumeSliderContainer {
  display: flex;
  justify-content: center;
  height: 100%;
}

.sliderClass {
  width: 90%;
}

.gongTypeSelectionContainer, .areaSelectionContainer,
.volumeSelectionContainer {
  display: flex;
  flex-direction: row;
  width: 25vw;
  border-left: 9px groove white;
  margin-top: 1vh;
}

.volumeSelectionContainer {
  align-items: center;
}

.ctrlContentContainer {
  width: 100%;
}

.selectedGongTypeClass {
  color: white;
  background-color: dodgerblue;
}

.containerHeader {
  writing-mode: vertical-lr;
  transform: rotate(180deg);
  text-orientation: mixed;
  text-align: center;
  border-left: 6px lightgray double;
  padding: 1vh 0vw 1vh 1vw;
}

.btnGroup {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  width: 25vw;
  padding-top: 2vh;
}

.listItemClass {
  height: unset !important;
  padding: 1vw 0px !important;
}

.manualButton {
  margin: 1vw 1vh;
}

.datePickerContainer {
  display: none;
}

::ng-deep .snackBarClass {
  width: 50vw !important;
}

::ng-deep .snackBarClass .mat-simple-snackbar {
  justify-content: center;
}

::ng-deep .mat-snack-bar-handset {
  display: flex;
  flex-direction: row;
  align-content: center;
  justify-content: center;
}

::ng-deep .mat-list .mat-list-item.center .mat-list-item-content {
  justify-content: center;
}

